--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run test:mocha",
+    "test:mocha": "mocha",
     "start": "node server.js"
+    
   },
   "repository": {
     "type": "git",
